--- a/estilos.css
+++ b/estilos.css
@@ -1,49 +1,49 @@
 /* Reset general */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 /* aspecto general del body */
 body {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-align: center;
-    padding: 10px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-align: center;
+  padding: 10px;
 }
 
 /* encabezado y sus partes */
 header {
-    background-color: aquamarine;
-    padding: 20px;
-    display: flex;
-    align-items: start;
-    flex-wrap: wrap;
+  background-color: aquamarine;
+  padding: 20px;
+  display: flex;
+  align-items: start;
+  flex-wrap: wrap;
 }
 
 nav {
-    width: 100%;
+  width: 100%;
 }
 
 nav h1 {
-    text-align: left;
-    font-size: 24px;
+  text-align: left;
+  font-size: 24px;
 }
 
 nav h3 {
-    text-align: left;
-    font-size: 20px;
+  text-align: left;
+  font-size: 20px;
 }
 
 .boton {
-    background-color: pink;
-    text-decoration: none;
-    text-align: right;
-    color: black;
-    font-weight: bold;
-    border-radius: 5px;
-    display: inline-block;
-    padding: 10px;
+  background-color: pink;
+  text-decoration: none;
+  text-align: right;
+  color: black;
+  font-weight: bold;
+  border-radius: 5px;
+  display: inline-block;
+  padding: 10px;
 }
 
 .zonas-padre {
@@ -61,8 +61,42 @@ nav h3 {
 }
 
 .imagen-zona {
-  width: 200px; 
+  width: 200px;
   margin-bottom: 15px;
+}
+
+/* probando media query */
+
+/* Estilo por defecto (mobile first) */
+.encabezadodepagina {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+}
+
+.encabezadodepagina .boton {
+  align-self: flex-start;
+  }
+
+/* Desktop */
+@media (min-width: 768px) {
+  .encabezadodepagina {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .encabezadodepagina .boton {
+    align-self: center;
+
+  }
+}
+
+@media (max-width: 768px) {
+  .zonas-padre {
+    grid-template-columns: 1fr;
+  }
 }
 
 /* pagina butstrap edificios */
@@ -83,7 +117,7 @@ nav h3 {
   transition: background-color 0.3s ease;
 }
 
-/* al pasar por arriba del boton va a cambiar de color */
+/* al pasar por arriba del boton va a cambiar de color (revisar hover)*/
 .titulo-edificio:hover {
   background-color: #fffc4d;
 }
@@ -95,7 +129,8 @@ nav h3 {
   margin-bottom: 15px;
 }
 
-.boton_de_edificios:checked + .titulo-edificio + .opciones {
+/* Colcoar el + busca al hermano inmediato */
+.boton_de_edificios:checked+ .titulo-edificio+ .opciones {
   display: flex;
 }
 
